--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <modules>
+  <modules><!-- ttttt -->
     <module>parent</module>
     <module>hlcto-utils</module>
     <module>springmvc</module>
