--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <modules>
+  <modules><!-- ttttt -->
     <module>parent</module>
     <module>hlcto-utils</module>
     <module>springmvc</module>
@@ -30,21 +30,17 @@
   </properties>
 
  <build>
-  <!-- <plugins>
-	<plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
-        <configuration>
-          <compilerId>eclipse</compilerId>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>plexus-compiler-eclipse</groupId>
-            <artifactId>plexus-compiler-csharp</artifactId>
-            <version>${java.version}</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-</plugins> -->
+   <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+
   </build>
 </project>
