--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.rpframework</groupId>
-  <artifactId>rpframework</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0</version>
-  <name>rpframework</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <modules><!-- ttttt -->
-    <module>parent</module>
-    <module>hlcto-utils</module>
-    <module>springmvc</module>
-    <module>module</module>
-    <module>website</module>
-    <module>hlcto-core</module>
-  </modules>
-  <properties>
-  	<spring-version>4.1.5.RELEASE</spring-version>
-  	<java.version>1.7</java.version>
-  	<encoding>UTF-8</encoding>
-  </properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.rpframework</groupId>
+	<artifactId>rpframework</artifactId>
+	<packaging>pom</packaging>
+	<version>1.0</version>
+	<name>rpframework</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<modules>
+		<module>parent</module>
+		<module>hlcto-utils</module>
+		<module>springmvc</module>
+		<module>module</module>
+		<module>website</module>
+		<module>hlcto-core</module>
+	</modules>
+	<properties>
+		<spring-version>4.1.5.RELEASE</spring-version>
+		<!-- <java-version>1.7</java-version>
+		<encoding>UTF-8</encoding> -->
+	</properties>
 
- <build>
-   <plugins>
+	<!--<build>
+		 <plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -40,7 +41,7 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-		</plugins>
+		</plugins> 
 
-  </build>
+	</build>-->
 </project>
