--- a/pom.xml
+++ b/pom.xml
@@ -28,19 +28,28 @@
 		<spring-version>4.1.5.RELEASE</spring-version>
 		<java-version>1.7</java-version>
 		<encoding>UTF-8</encoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
-	<!-- <build>
-		 <plugins>
+	
+	<build>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+					<compilerId>eclipse</compilerId>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-compiler-eclipse</artifactId>
+						<version>2.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
-		</plugins> 
-	</build> -->
+		</plugins>
+	</build>
 </project>
