--- a/hlcto-core/pom.xml
+++ b/hlcto-core/pom.xml
@@ -147,7 +147,12 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
-				
+		
+		<dependency>
+			<groupId>org.htmlparser</groupId>
+			<artifactId>htmlparser</artifactId>
+			<version>1.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.rpframework</groupId>
