--- a/website/xuetian-exam/src/main/resources/server.properties
+++ b/website/xuetian-exam/src/main/resources/server.properties
@@ -4,4 +4,4 @@ jdbc.maxIdle=30
 jdbc.maxWait=3000
 jdbc.url=jdbc:mysql://127.0.0.1:3306/xuetian-exam?characterEncoding=UTF-8&characterSetResults=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
