website yunpiaopiao 项目 及初始化 sql

--- a/website/pom.xml
+++ b/website/pom.xml
@@ -22,5 +22,6 @@
     <module>testwebsite</module>
     <module>edongwang</module>
     <module>xuetian-exam</module>
+    <module>yunpiaopiao</module>
   </modules>
 </project>
