--- a/website/yunpiaopiao/pom.xml
+++ b/website/yunpiaopiao/pom.xml
@@ -7,12 +7,12 @@
     <artifactId>website</artifactId>
     <version>1.0</version>
   </parent>
-  <artifactId>xuetian-exam</artifactId>
+  <artifactId>yunpiaopiao</artifactId>
   <packaging>war</packaging>
-  <name>xuetian-exam Maven Webapp</name>
+  <name>yunpiaopiao Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+     <dependency>
     	<groupId>com.rpframework</groupId>
     	<artifactId>admin-base-module</artifactId>
     	<version>1.0</version>
@@ -24,6 +24,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>xuetian-exam</finalName>
+    <finalName>yunpiaopiao</finalName>
   </build>
 </project>
