--- a/website/yunpiaopiao/src/main/resources/log4j.properties
+++ b/website/yunpiaopiao/src/main/resources/log4j.properties
@@ -13,8 +13,8 @@ log4j.logger.java.sql.Statement=INFO
 log4j.logger.java.sql.PreparedStatement=INFO
 
 # Spring Stuff
-log4j.logger.org.springframework=DEBUG
-log4j.logger.org.springframework.oxm=DEBUG
+log4j.logger.org.springframework=INFO
+log4j.logger.org.springframework.oxm=INFO
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
