--- a/website/yunpiaopiao/src/main/webapp/WEB-INF/web.xml
+++ b/website/yunpiaopiao/src/main/webapp/WEB-INF/web.xml
@@ -115,4 +115,8 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- Spring MVC Config End -->
+	<welcome-file-list>
+		<welcome-file>/</welcome-file>
+	</welcome-file-list>
+	
 </web-app>
