--- a/website/pom.xml
+++ b/website/pom.xml
@@ -23,5 +23,7 @@
     <module>edongwang</module>
     <module>xuetian-exam</module>
     <module>yunpiaopiao</module>
+    <module>yunnongxin</module>
+    <module>datangwenshen1</module>
   </modules>
 </project>
