--- a/website/yunnongxin/src/main/webapp/WEB-INF/web.xml
+++ b/website/yunnongxin/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  
-  <context-param>
+	<display-name>Archetype Created Web Application</display-name>
+
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath:applicationContext.xml,
@@ -27,17 +27,17 @@
 		<param-name>log4jRefreshInterval</param-name>
 		<param-value>6000</param-value>
 	</context-param>
-	
+
 	<!-- sitemesh Start -->
 	<filter>
-	    <filter-name>sitemesh</filter-name>
-	    <filter-class>com.rpframework.core.sitemesh.MySiteMeshFilter</filter-class>
-	  </filter>
-	
-	  <filter-mapping>
-	    <filter-name>sitemesh</filter-name>
-	    <url-pattern>/*</url-pattern>
-	  </filter-mapping>
+		<filter-name>sitemesh</filter-name>
+		<filter-class>com.rpframework.core.sitemesh.MySiteMeshFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>sitemesh</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<!-- sitemesh End -->
 
 	<filter>
@@ -55,7 +55,7 @@
 	<filter-mapping>
 		<filter-name>characterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> 
+	</filter-mapping>
 
 	<!-- freemarker sitemesh springmvc 整合配置 -->
 	<filter>
@@ -66,33 +66,33 @@
 		<filter-name>freemarkerFilter</filter-name>
 		<url-pattern>*.ftl</url-pattern>
 		<dispatcher>REQUEST</dispatcher>
-    	<dispatcher>FORWARD</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
 	</filter-mapping>
-  
+
 	<!-- Spring Log4J config -->
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 	<!-- Log4J End -->
-	
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<!-- fck start -->
 	<servlet>
 		<servlet-name>fckservlet</servlet-name>
 		<servlet-class>net.fckeditor.connector.ConnectorServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>fckservlet</servlet-name>
 		<!-- Filter all resources -->
 		<url-pattern>/resources/plugins/fckeditor/editor/filemanager/connectors/*</url-pattern>
 	</servlet-mapping>
 	<!-- fck end -->
-	
+
 	<servlet>
 		<servlet-name>initServlet</servlet-name>
 		<servlet-class>com.rpframework.core.InitServlet</servlet-class>
@@ -118,5 +118,5 @@
 	<welcome-file-list>
 		<welcome-file>/</welcome-file>
 	</welcome-file-list>
-	
+
 </web-app>
