--- a/module/user-module/pom.xml
+++ b/module/user-module/pom.xml
@@ -16,5 +16,10 @@
   		<artifactId>springmvc</artifactId>
   		<version>1.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.rpframework</groupId>
+  		<artifactId>common-module</artifactId>
+  		<version>1.0</version>
+  	</dependency>
   </dependencies>
 </project>
