datangwenshen 项目 url 重新定义

--- a/website/datangwenshen/src/main/resources/log4j.properties
+++ b/website/datangwenshen/src/main/resources/log4j.properties
@@ -2,19 +2,19 @@
 log4j.rootCategory=INFO, stdout,logFile
 
 # OpenSymphony Stuff
-log4j.logger.org.apache.commons=DEBUG 
-log4j.logger.org.mybatis=DEBUG
-log4j.logger.base=DEBUG
+log4j.logger.org.apache.commons=INFO 
+log4j.logger.org.mybatis=INFO
+log4j.logger.base=INFO
 
-log4j.logger.org.apache.ibatis=DEBUG
-log4j.logger.java.sql=DEBUG
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.org.apache.ibatis=INFO
+log4j.logger.java.sql=INFO
+log4j.logger.java.sql.Connection=INFO
+log4j.logger.java.sql.Statement=INFO
+log4j.logger.java.sql.PreparedStatement=INFO
 
 # Spring Stuff
-log4j.logger.org.springframework=DEBUG
-log4j.logger.org.springframework.oxm=DEBUG
+log4j.logger.org.springframework=INFO
+log4j.logger.org.springframework.oxm=INFO
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
