mf 门户项目初始化 删除冗余项目 datangwenshen1 xiangdemei项目初始化

--- a/website/pom.xml
+++ b/website/pom.xml
@@ -26,5 +26,7 @@
     <module>yunnongxin</module>
     <module>datangwenshen1</module>
     <module>datangwenshen</module>
+    <module>mf</module>
+    <module>xiangdemei</module>
   </modules>
 </project>
