--- a/website/mf/pom.xml
+++ b/website/mf/pom.xml
@@ -7,23 +7,23 @@
     <artifactId>website</artifactId>
     <version>1.0</version>
   </parent>
-  <artifactId>yunnongxin</artifactId>
+  <artifactId>mf</artifactId>
   <packaging>war</packaging>
-  <name>yunnongxin Maven Webapp</name>
+  <name>mf Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-    	<groupId>com.rpframework</groupId>
-    	<artifactId>admin-base-module</artifactId>
-    	<version>1.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>com.rpframework</groupId>
-    	<artifactId>common-module</artifactId>
-    	<version>1.0</version>
-    </dependency>
-  </dependencies>
   <build>
-    <finalName>yunnongxin</finalName>
+    <finalName>mf</finalName>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.rpframework</groupId>
+  		<artifactId>admin-base-module</artifactId>
+  		<version>1.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.rpframework</groupId>
+  		<artifactId>common-module</artifactId>
+  		<version>1.0</version>
+  	</dependency>
+  </dependencies>
 </project>
