--- a/hlcto-core/pom.xml
+++ b/hlcto-core/pom.xml
@@ -18,7 +18,43 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		 <dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-redis</artifactId>
+	        <version>1.5.0.RELEASE</version>
+	        <exclusions>
+	        	<exclusion>
+	        		<groupId>org.springframework</groupId>
+	        		<artifactId>spring-core</artifactId>
+	        	</exclusion>
+	        	
+	        	<exclusion>
+	        		<groupId>org.springframework</groupId>
+	        		<artifactId>spring-aop</artifactId>
+	        	</exclusion>
+	        	
+	        	<exclusion>
+	        		<groupId>org.springframework</groupId>
+	        		<artifactId>spring-tx</artifactId>
+	        	</exclusion>
+	        	
+	        	<exclusion>
+	        		<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+	        	</exclusion>
+	        </exclusions>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>2.6.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -112,6 +148,12 @@
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-pool2</artifactId>
+		    <version>2.4.1</version>
 		</dependency>
 
 		<dependency>
