--- a/hlcto-utils/pom.xml
+++ b/hlcto-utils/pom.xml
@@ -55,5 +55,11 @@
 			<artifactId>htmlparser</artifactId>
 			<version>1.6</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.11</version>
+		</dependency>
 	</dependencies>
 </project>
