--- a/website/pom.xml
+++ b/website/pom.xml
@@ -18,4 +18,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <modules>
+    <module>luoluo</module>
+  </modules>
 </project>
