--- a/hlcto-utils/pom.xml
+++ b/hlcto-utils/pom.xml
@@ -61,5 +61,11 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+
 	</dependencies>
 </project>
